--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<!-- Heroes will only be displayed when the user navigates to /heroes -->
 <h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<nav>
+  <!--  RouterLink is the directive that turns clinks into navigation -->
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
